<resources>
    <!-- -->
    <string name="app_name">MiseApp</string>

    <!--Inicio del texto para opciones de menu-->
    <string name="ajustes">Ajustes</string>
    <string name="productos">Productos</string>
    <string name="servicios">Servicios</string>
    <string name="sucursales">Sucursales</string>
    <string name="precio">Precio</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="codigo">Codigo</string>
    <string name="detalles">Detalles</string>
    <string name="stock">Stock</string>
    <string name="agregar">Agregar</string>
    <string name="sucursal_centro">Sucursal centro</string>
    <string name="calle_8_12_c_14_estero">Calle 8 # 12 c 14 estero</string>
    <string name="horarios">de 8.00 am - 08:00 pm</string>
    <string name="horarios_de_lun_vie">Horarios de Lun - Vie</string>
    <!--Fin del texto para opciones de menu-->
</resources>