<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_produtos"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:onClick="productos"
        android:text="@string/productos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/btn_servicios"
        android:layout_width="135dp"
        android:layout_height="121dp"
        android:onClick="servicios"
        android:text="@string/servicios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/btn_produtos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btn_sucursales"
        android:layout_width="135dp"
        android:layout_height="121dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:onClick="sucursales"
        android:text="@string/sucursales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_produtos" />
</androidx.constraintlayout.widget.ConstraintLayout>